bug on index page where safari did overflowed some "post it" divs

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -6,7 +6,7 @@
 #night > div:first-child,
 #energetica > div:first-child,
 #see-all-exhibitions {
-  flex: 1 1 150px;
+  flex: 1 0 auto;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 }
 
 #welcome-section > div:first-child {
-  flex: 1 1 150px;
+  flex: 1 0 auto;
   padding-top: var(--logo-height);
 }
 
